# SelectedTopicsInProgramming-Exercises

./: .gitignore  Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  NumberSeries.cpp  NumberSeries.h  benchmark.cpp  benchmark.h  dynamic_NumberSeries.cpp  dynamic_NumberSeries.h  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise5.cpp  exercise7.cpp  lehmer.cpp  lehmer.h  main.cpp  polygon.cpp  polygon.hpp  test_polygon.cpp  wordle.js
calculator/: CMakeLists.txt  Visitor.cpp  Visitor.h  calculator.hpp  expr_t.hpp  term_t.hpp  test_calculator.cpp
polygon/polygon/: polygon.cpp  test_polygon.cpp
